Ajustes Atualziar nos Controlelrs
