# routes/api.php
@@ -34,7 +34,7 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('artista/{id}', [ArtistaController::class, 'show']);
     Route::put('artista/{id}', [ArtistaController::class, 'update']);
     Route::delete('artista/{id}', [ArtistaController::class, 'destroy']);
-    Route::get('artista/{pesquisa}', [ArtistaController::class, 'pesquisa']);
+    Route::get('artistas/{pesquisa}', [ArtistaController::class, 'pesquisa']);
 
     /* Rotas para os Albuns */
     Route::get('album', [AlbumController::class, 'index']);
@@ -42,7 +42,7 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('album/{id}', [AlbumController::class, 'show']);
     Route::put('album/{id}', [AlbumController::class, 'update']);
     Route::delete('album/{id}', [AlbumController::class, 'destroy']);
-    Route::get('album/{pesquisa}', [AlbumController::class, 'pesquisa']);
+    Route::get('albuns/{pesquisa}', [AlbumController::class, 'pesquisa']);
 
     /* Rotas para as Musicas */
     Route::get('musica', [MusicaController::class, 'index']);
@@ -50,7 +50,7 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('musica/{id}', [MusicaController::class, 'show']);
     Route::put('musica/{id}', [MusicaController::class, 'update']);
     Route::delete('musica/{id}', [MusicaController::class, 'destroy']);
-    Route::get('musica/{pesquisa}', [MusicaController::class, 'pesquisa']);
+    Route::get('musicas/{pesquisa}', [MusicaController::class, 'pesquisa']);
 
     /* Rotas para os Foto Albuns */
     //Route::get('foto-album', [FotoAlbumController::class, 'index']);    
